samples/_failures_safe/1761405569_004269_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23732f0c.c: In function ‘main’:
./samples/SAFE/__tmp_23732f0c.c:166:5: error: expected expression at end of input
  166 |     for (int i = 0; i < graph.node_count; i++)
      |     ^~~
./samples/SAFE/__tmp_23732f0c.c:166:5: error: expected declaration or statement at end of input
